<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/appinfo_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"></TextView>

    <ImageView
        android:id="@+id/image_logo_app"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logoo"
        android:src="@drawable/microphone"
        android:tint="@color/red" />
    <TextView
        android:id="@+id/appinfo_version_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textSize="15sp"></TextView>

    <TextView
        android:id="@+id/appinfo_reserved_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_2022_speak_hear_mystrikingly_com"
        android:textSize="15sp"></TextView>

</LinearLayout>