<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/contact_us_textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="22sp"
        android:text="@string/www_speak_hear_mystrikingly_com"></TextView>
        <TextView
            android:id="@+id/contact_us_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:text="@string/for_queries_contact_us_using_contact_form_on_our_website"></TextView>

        <TextView
            android:id="@+id/send_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:background="@color/red"
            android:textSize="20sp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:text="@string/send"></TextView>

</LinearLayout>