<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity2">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@color/darkrred"></androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bgcircle"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/microphone"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/microphone"
                        android:tint="@color/red" />
                </LinearLayout>

                <TextView
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/touch_on_the_microphone_to_speak"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/bgcircle"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/speaker"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/volume"
                        android:enabled="false"
                        android:tint="@color/red" />
                </LinearLayout>

                <TextView
                    android:id="@+id/help1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/touch_on_the_speaker_to_listen"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/speakerSpeech"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/listen_what_you_have_spoken"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/manabjyoti"
                android:textSize="22sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>