<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/help_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title=" "
            app:titleTextColor="@color/red">

            <ImageView
                android:id="@+id/help_back_image"
                android:layout_width="30dp"
                android:layout_height="27dp"
                android:tint="@color/darkrred"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:padding="5dp"
            android:textColor="@color/darkrred"
            android:text="@string/help"
            android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_toolbar">

        <ImageView
            android:id="@+id/help_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:tint="@color/darkrred"
            app:srcCompat="@drawable/ic_baseline_help_24" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/help_center"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

        <ImageView
            android:id="@+id/contact_us_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:tint="@color/darkrred"
            app:srcCompat="@drawable/ic_baseline_people_alt_24" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/contact_us"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/appinfo_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:tint="@color/darkrred"
            app:srcCompat="@drawable/ic_baseline_info_24" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:padding="3dp"
            android:text="@string/app_information"
            android:textSize="15sp"></com.google.android.material.textview.MaterialTextView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
        <ImageView
            android:id="@+id/setting_invite_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:tint="@color/red"
            app:srcCompat="@drawable/microphone" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/share_the_app"
            android:textSize="15sp"></com.google.android.material.textview.MaterialTextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manabjyoti"
            android:layout_marginTop="2dp"
            android:textSize="22sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>